tests/instantiating/range_left_bound_greater_than_right/stderr.golden
error: range left bound greater than right bound, 12 > 1
bus.fbd +3:13
   |
 3 |     range = 12:1
   |             ^^^^
